Playercharacter und VIEL refactoring der GameScene, EditorScene. Scene kann jetzt auch im Menu verwendet werden